# sleeping

./: README.md  sleeping.sln
pico-button/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
pico-button/.cargo/: config-secrets.toml.default
pico-button/firmware/: README.md
pico-button/src/: client.rs  led.rs  main.rs  net.rs  wifi.rs
server/: .dockerignore  Dockerfile  GlobalSuppressions.cs  Program.cs  appsettings.Development.json  server.csproj
server/Config/: ServerOptions.cs
server/Controllers/: PingController.cs  SleepingController.cs
server/Identity/: SharedSecretAuthenticationHandler.cs
server/Models/: PingResponse.cs  RecordResponse.cs
server/Properties/: launchSettings.json
server/Services/: PingRecorder.cs
