[package]
name = "pico-button"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rand = { version = "0.8", features = ["small_rng"], default-features = false }

static_cell = "2.0"
portable-atomic = { version = "1.6", features = ["critical-section"] }

embassy-sync = { version = "0.5.0", features = ["defmt"] }

embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "defmt",
    "arch-cortex-m",
    "integrated-timers",
    "executor-thread",
    # "executor-interrupt",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "intrinsics",
    "time-driver",
    "critical-section-impl",
] }
embassy-net = { version = "0.4.0", features = [
    "defmt",
    "tcp",
    "dns",
    "dhcpv4",
    "medium-ethernet",
] }


cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"

cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
